--- a/piClock.css
+++ b/piClock.css
@@ -13,8 +13,8 @@ body {
 }
 
 .piAtomWrapper {
-    width: 20px;
-    height: 20px;
+    width: 10%;
+    height: 10%;
     position: relative;
     float: left;
 }
@@ -23,4 +23,12 @@ body {
     width: 100%;
     height: 100%;
     background: #DB5B0C;
+    opacity: 1;
+    -webkit-transition: all linear 1s;
+  transition: all linear 1s;
+}
+
+.piAtom.ng-hide {
+    display: block!important;
+    opacity: 0;
 }
