--- a/piClock.css
+++ b/piClock.css
@@ -6,6 +6,14 @@ body {
     padding: 0;
 }
 
+.credit {
+    position: absolute;
+    bottom: 4px;
+    right: 4px;
+    color: white;
+    font-family: monospace;
+}
+
 .piClock {
     background: #03141F;
     width: 100%;
